--- a/src/elements/Modal/Modal.fixture.pcss
+++ b/src/elements/Modal/Modal.fixture.pcss
@@ -10,4 +10,7 @@
     // width: 70%;
     // height: 300px
   }
+  .simpleContainer {
+    max-width: 100%;
+  }
 }
